last.log
[[31m Error  [0m] KVS.scala:11:8: error: Protocol is already defined as object Protocol
           object Protocol {
                  [31m^[0m
[[31m[1m Fatal  [0m] There were errors.
